--- a/templates/scribing.html
+++ b/templates/scribing.html
@@ -90,8 +90,17 @@
         <div id="post-box" class="form-post">
             <div>
                 <div class="form-group">
-                    <label for="post-url">날짜</label>
-                    <input id="post-url" class="form-control" placeholder="">
+                    <label for="today">날짜</label>
+<!--                    <input type="date" id="today" class="form-control">-->
+                    <form>
+                        <input type='date' id='today'/>
+                    </form>
+
+                    <script>
+                        document.getElementById('today').value = new Date().toISOString().substring(0, 10);
+                        ;
+                    </script>
+                    <!--                    <input id="post-url" class="form-control" placeholder="">-->
                 </div>
                 <div class="form-group">
                     <label for="post-comment">기록하기</label>
