--- a/templates/silence.html
+++ b/templates/silence.html
@@ -50,16 +50,22 @@
         }
 
         .comment {
-            color: #0000ff;
-            font-weight: bold;
+            color: #1010cb;
+            /*font-weight: bold;*/
         }
 
         #post-box {
             width: 300px;
             margin: 20px auto;
             padding: 50px;
-            border: black solid;
+            border: solid;
             border-radius: 5px;
+        }
+        .delete {
+            color: #d90404;
+            text-decoration: underline;
+            text-align: right;
+
         }
     </style>
 
@@ -115,7 +121,7 @@
                     let silences = response["silences"];
                     console.log(silences);
                     for (let i = 0; i < silences.length; i++) {
-                        makecard_silence(silences[i]["image"], silences[i]["url"], silences[i]["title"], silences[i]["desc"], silences[i]["comment"])
+                        makecard_silence(silences[i]["image"], silences[i]["url"], silences[i]["title"],  silences[i]["comment"])
                     }
                 }
             })
@@ -132,19 +138,21 @@
                     if (response['result'] == 'success') {
                         // 2. '삭제 완료! 안녕!' 얼럿을 띄웁니다.
                         alert('삭제 완료!')
+                        window.location.reload();
+                    } else {
+                        alert("서버 오류!")
                     }
                 }
             });
         }
 
-        function makecard_silence(image, url, title, desc, comment) {
+        function makecard_silence(image, url, title, comment) {
             let temp_html = `<div class="card">
                         <img class="card-img-top" src="${image}" alt="Card image cap">
                         <div class="card-body">
                         <a href="${url}" target="_blank" class="card-title">${title}</a>
-                        <p class="card-text">${desc}</p>
                         <p class="card-text comment">${comment}</p>
-                        <a href="#" class="card-link" onclick="delete_silence('${url}')">삭제하기</a>
+                        <a href="#" class="delete" onclick="delete_silence('${url}')">삭제</a>
                         </div>
                     </div>`;
             $("#cards-box").append(temp_html);
@@ -200,7 +208,7 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="card-link"
+                    <a href="#"  class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
@@ -213,7 +221,7 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="card-link"
+                    <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
@@ -226,7 +234,7 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="card-link"
+                    <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
@@ -239,7 +247,7 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="card-link"
+                    <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
@@ -252,7 +260,7 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p
-                    <a href="#" class="card-link"
+                    <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
@@ -265,7 +273,7 @@
                     <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
                         화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="card-link"
+                    <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
