--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -13,8 +13,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -51,22 +50,30 @@
         }
 
         .comment {
-            color: blue;
-            font-weight: bold;
+            color: #1010cb;
+            /*font-weight: bold;*/
         }
 
         #post-box {
             width: 300px;
             margin: 20px auto;
             padding: 50px;
-            border: black solid;
+            border: #b4b6b6 solid;
             border-radius: 5px;
         }
+
+        .delete {
+            color: #d90404;
+            text-decoration: underline;
+            text-align: right;
+
+        }
+
     </style>
 
     <script>
         $(document).ready(function () {
-            $("#exercise-box").html("");
+            $("#cards-box").html("");
             show_exercise_movie();
         });
 
@@ -116,22 +123,40 @@
                     let exercises = response["exercises"];
                     console.log(exercises);
                     for (let i = 0; i < exercises.length; i++) {
-                        makecard_exercise(exercises[i]["image"], exercises[i]["url"], exercises[i]["title"], exercises[i]["desc"], exercises[i]["comment"])
+                        makecard_exercise(exercises[i]["image"], exercises[i]["url"], exercises[i]["title"], exercises[i]["comment"])
                     }
                 }
             })
         }
 
-        function makecard_exercise(image, url, title, desc, comment) {
-            let temp_html = `<div class="card">
+        function delete_exercise(url) {
+            $.ajax({
+                type: "POST",
+                url: "/api/exercise/delete",
+                data: {url_give: url},
+                success: function (response) {
+                    if (response['result'] == 'success') {
+                        // 2. '삭제 완료! 안녕!' 얼럿을 띄웁니다.
+                        alert('삭제 완료!')
+                        window.location.reload();
+                    } else {
+                        alert("서버 오류!")
+                    }
+                }
+            });
+        }
+
+
+        function makecard_exercise(image, url, title, comment) {
+            let temp_html = `<div class="card" style="width: 200px;">
                         <img class="card-img-top" src="${image}" alt="Card image cap">
                         <div class="card-body">
-                        <a href="${url}" target="_blank" class="card-title">${title}</a>
-                        <p class="card-text">${desc}</p>
+                        <a href="${url}" target="_blank" class="card-title" >${title}</a>
                         <p class="card-text comment">${comment}</p>
+                        <a href="#" class="delete" onclick="delete_exercise('${url}')">삭제</a>
                         </div>
                     </div>`;
-            $("#exercise-box").append(temp_html);
+            $("#cards-box").append(temp_html);
         }
     </script>
 </head>
@@ -174,15 +199,13 @@
                 <button type="button" class="btn btn-danger" onclick="post_exercise_movie()">영상저장</button>
             </div>
         </div>
-        <div id="exercise-box" class="card-columns">
+        <div id="cards-box" class="card-columns">
             <div class="card">
                 <img class="card-img-top"
                      src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
                 </div>
             </div>
@@ -192,8 +215,6 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
                 </div>
             </div>
@@ -203,9 +224,9 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                    <a href="#" class="delete"
+                       onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
             <div class="card">
@@ -214,9 +235,9 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                    <a href="#" class="delete"
+                       onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
             <div class="card">
@@ -225,9 +246,9 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                    <a href="#" class="delete"
+                       onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
             <div class="card">
@@ -236,9 +257,9 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                    <a href="#" class="delete"
+                       onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
         </div>
