--- a/templates/reading.html
+++ b/templates/reading.html
@@ -27,6 +27,50 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 
+
+    <style type="text/css">
+        * {
+            font-family: 'Yeon Sung', cursive;
+        }
+
+        .wrap {
+            width: 600px;
+            margin: auto;
+        }
+
+        h1, h5 {
+            display: inline;
+        }
+
+        .img {
+            background-image: url('https://wonderfulmind.co.kr/wp-content/uploads/2018/05/girl-reading-a-book-with-cat-bookmark-600x367.jpg');
+            background-size: cover;
+            background-position: center;
+            width: 300px;
+            height: 200px;
+        }
+
+        .review {
+            text-align: center;
+        }
+
+        .reviews {
+            margin-top: 100px;
+        }
+
+        .table {
+            table-layout: fixed;
+            word-break: break-all;
+        }
+
+        .delete {
+            color: #d90404;
+            text-decoration: underline;
+            text-align: right;
+
+        }
+
+    </style>
     <script type="text/javascript">
 
         $(document).ready(function () {
@@ -96,51 +140,40 @@
                         <td>${title}</td>
                         <td>${author}</td>
                         <td>${review}</td>
+                        <td class="delete" onclick="delete_review('${title}')">삭제</td>
                     </tr>`;
             $("#reviews-box").append(tempHtml);
         }
 
+        function delete_review(title) {
+            // 1. 서버에 1) POST 방식으로, 2) /api/delete 라는 url에, 3) name_give라는 이름으로 name을 전달합니다.
+            // 참고) POST 방식이므로 data: {'name_give': name} 과 같은 양식이 되어야합니다!
+            $.ajax({
+                type: "POST",
+                url: "/api/read/delete",
+                data: {title_give: title},
+                success: function (response) {
+                    if (response['result'] == 'success') {
+                        // 2. '삭제 완료! 안녕!' 얼럿을 띄웁니다.
+                        alert('삭제 완료!')
+                        window.location.reload();
+                    } else {
+                        alert("서버 오류!")
+                    }
+                }
+            });
+        }
+
         function validateLength(obj) {
             let content = $(obj).val();
-            if (content.length > 140) {
-                alert("리뷰는 140자까지 기록할 수 있습니다.");
+            if (content.length > 150) {
+                alert("리뷰는 150자까지 기록할 수 있습니다.");
                 $(obj).val(content.substring(0, content.length - 1));
             }
         }
     </script>
 
 
-    <style type="text/css">
-        * {
-            font-family: 'Yeon Sung', cursive;
-        }
-
-        .wrap {
-            width: 600px;
-            margin: auto;
-        }
-
-        h1, h5 {
-            display: inline;
-        }
-
-        .img {
-            background-image: url('https://wonderfulmind.co.kr/wp-content/uploads/2018/05/girl-reading-a-book-with-cat-bookmark-600x367.jpg');
-            background-size: cover;
-            background-position: center;
-            width: 300px;
-            height: 200px;
-        }
-
-        .review {
-            text-align: center;
-        }
-
-        .reviews {
-            margin-top: 100px;
-        }
-
-    </style>
 </head>
 <body>
 <div class="wrap">
@@ -161,52 +194,57 @@
     <br>
     <div class="img"></div>
     <br>
+    <div class="wrap">
+        <div class="container">
+            <div class="info">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">제목</span>
+                    </div>
+                    <input type="text" class="form-control" id="title">
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">저자</span>
+                    </div>
+                    <input type="text" class="form-control" id="author">
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">리뷰</span>
+                    </div>
+                    <textarea class="form-control" id="bookReview"
+                              cols="30"
+                              rows="5" placeholder="150자까지 입력할 수 있습니다." onkeyup="validateLength(this)"></textarea>
+                </div>
+                <div class="review">
+                    <button onclick="makeReview()" type="button" class="btn btn-warning">읽은 책 등록하기</button>
+                </div>
+            </div>
 
-    <div class="container">
-        <div class="info">
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">제목</span>
-                </div>
-                <input type="text" class="form-control" id="title">
+            <div class="reviews">
+                <table class="table">
+                    <h4 style="font-weight:bold"> &#x1F4DA; 읽은 책 목록 </h4>
+                    <br>
+                    <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col" col width="25%">제목</th>
+                        <th scope="col" col width="15%">저자</th>
+                        <th scope="col" col width="50%">리뷰</th>
+                    </tr>
+                    </thead>
+                    <tbody id="reviews-box">
+                    <tr>
+                        <td>왕초보 8주 코딩</td>
+                        <td>김르탄</td>
+                        <td>역시 왕초보 코딩교육의 명가답군요. 따라하다보니 눈 깜짝할 사이에 8주가 지났습니다.</td>
+                        <td class="delete" onclick="delete_review('제목')">삭제</td>
+                    </tr>
+                    </tbody>
+                    </table>
+                </table>
             </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">저자</span>
-                </div>
-                <input type="text" class="form-control" id="author">
-            </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">리뷰</span>
-                </div>
-                <textarea class="form-control" id="bookReview"
-                          cols="30"
-                          rows="5" placeholder="140자까지 입력할 수 있습니다." onkeyup="validateLength(this)"></textarea>
-            </div>
-            <div class="review">
-                <button onclick="makeReview()" type="button" class="btn btn-warning">읽은 책 등록하기</button>
-            </div>
-        </div>
-
-        <div class="reviews">
-            <table class="table">
-                <h4>읽은 책 목록</h4>
-                <thead>
-                <tr>
-                    <th scope="col">제목</th>
-                    <th scope="col">저자</th>
-                    <th scope="col">리뷰</th>
-                </tr>
-                </thead>
-                <tbody id="reviews-box">
-                <tr>
-                    <td>왕초보 8주 코딩</td>
-                    <td>김르탄</td>
-                    <td>역시 왕초보 코딩교육의 명가답군요. 따라하다보니 눈 깜짝할 사이에 8주가 지났습니다.</td>
-                </tr>
-                </tbody>
-            </table>
         </div>
     </div>
 </div>
