--- a/templates/silence.html
+++ b/templates/silence.html
@@ -37,6 +37,7 @@
             margin: auto;
         }
 
+
         h1, h5 {
             display: inline;
         }
@@ -58,14 +59,13 @@
             width: 300px;
             margin: 20px auto;
             padding: 50px;
-            border: solid;
+            border: #b4b6b6 solid;
             border-radius: 5px;
         }
         .delete {
             color: #d90404;
             text-decoration: underline;
             text-align: right;
-
         }
     </style>
 
@@ -147,7 +147,7 @@
         }
 
         function makecard_silence(image, url, title, comment) {
-            let temp_html = `<div class="card">
+            let temp_html = `<div class="card" style="width: 200px;">
                         <img class="card-img-top" src="${image}" alt="Card image cap">
                         <div class="card-body">
                         <a href="${url}" target="_blank" class="card-title">${title}</a>
@@ -205,8 +205,6 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
                     <a href="#"  class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
@@ -218,8 +216,6 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
                     <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
@@ -231,8 +227,6 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
                     <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
@@ -244,8 +238,6 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
                     <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
@@ -257,8 +249,6 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p
                     <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
@@ -270,8 +260,6 @@
                      alt="Card image cap">
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리
-                        화려강산...</p>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
                     <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
