--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                 allowfullscreen></iframe>
     </div>
     <div>
-        <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('get_guidepage') }}"> 시작하기</a>
+        <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('get_silencepage') }}"> 시작하기</a>
     </div>
 </div>
 </body>
