--- a/templates/reading.html
+++ b/templates/reading.html
@@ -67,6 +67,7 @@
             color: #d90404;
             text-decoration: underline;
             text-align: right;
+            font-size: 13px;
 
         }
 
