--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 
+    <meta property="og:title" content="미라클 모닝"/>
+    <meta property="og:description" content="당신의 하루를 바꾸는 기적"/>
+    <meta property="og:image" content="{{ url_for('static', filename='miracle-morning.png') }}"/>
+
     <style type="text/css">
         * {
             font-family: 'Yeon Sung', cursive;
@@ -80,7 +84,7 @@
     <p>
     <div class="img"></div>
     <div class="info">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JxIi33rSbkg" frameborder="0"
+        <iframe width="400" height="280" src="https://www.youtube.com/embed/JxIi33rSbkg" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
     </div>
