--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -45,21 +45,26 @@
             background-image: url('https://img.huffingtonpost.com/asset/5d6fe0522500008d000314e9.jpeg?ops=scalefit_630_noupscale');
             background-size: cover;
             background-position: center;
-            width: 300px;
-            height: 200px;
+            width: 250px;
+            height: 180px;
         }
 
         .comment {
-            color: #1010cb;
+            color: #0a0a0a;
+            font-family: a펜고딕M;
             /*font-weight: bold;*/
         }
 
         #post-box {
-            width: 300px;
+            /*width: 300px;*/
             margin: 20px auto;
             padding: 50px;
             border: #b4b6b6 solid;
             border-radius: 5px;
+        }
+
+        #cards-box{
+            margin: 30px auto;
         }
 
         .delete {
@@ -148,7 +153,7 @@
 
 
         function makecard_exercise(image, url, title, comment) {
-            let temp_html = `<div class="card" style="width: 200px;">
+            let temp_html = `<div class="card">
                         <img class="card-img-top" src="${image}" alt="Card image cap">
                         <div class="card-body">
                         <a href="${url}" target="_blank" class="card-title" >${title}</a>
@@ -162,104 +167,108 @@
 </head>
 <body>
 
-<div class="wrap">
-    <p>
-    <h1 class="display-4">Exercise(운동)&#127774;</h1> <br>
-    <p>
-    <div class="menu">
-        <a class="btn btn-outline-primary" href="{{ url_for('get_silencepage') }}"> Silence<br>(침묵)</a>
-        <a class="btn btn-outline-secondary" href="{{ url_for('get_affirmationpage') }}">Affirmation<br>(확신의 말)</a>
-        <a class="btn btn-outline-success" href="{{ url_for('get_visualizationpage') }}">Visualization<br>(시각화)</a>
-        <a class="btn btn-danger" href="{{ url_for('get_exercisepage') }}">Exercise<br>운동</a>
-        <a class="btn btn-outline-warning" href="{{ url_for('get_readpage') }}"> Reading<br>(독서)</a>
-        <a class="btn btn-outline-info" href="{{ url_for('get_scribingpage') }}">Scribing<br>(쓰기)</a>
+<div class="center">
+    <div class="container">
+        <p>
+        <h1>Exercise(운동)&#127774;</h1> <br>
+        <p>
+        <div class="menu">
+            <a class="btn btn-outline-primary" href="{{ url_for('get_silencepage') }}"> Silence<br>(침묵)</a>
+            <a class="btn btn-outline-secondary" href="{{ url_for('get_affirmationpage') }}">Affirmation<br>(확신의 말)</a>
+            <a class="btn btn-outline-success" href="{{ url_for('get_visualizationpage') }}">Visualization<br>(시각화)</a>
+            <a class="btn btn-danger" href="{{ url_for('get_exercisepage') }}">Exercise<br>운동</a>
+            <a class="btn btn-outline-warning" href="{{ url_for('get_readpage') }}"> Reading<br>(독서)</a>
+            <a class="btn btn-outline-info" href="{{ url_for('get_scribingpage') }}">Scribing<br>(쓰기)</a>
+        </div>
+        <br>
+        <h4>몸과 마음의 균형을 맞추는 시간</h4>
+        <h5>일어서서 몸을 움직이세요! 에너지를 활성화해서 정신을 깨우고 집중력을 높여봐요.</h5>
+        <br>
+        <div class="img"></div>
     </div>
     <br>
-    <h3>눈을 뜨자마자 바로 할 수 있는 운동을 실행한다.</h3>
-    <h4>어떤 운동이든지 1분이라도 해보자. 활기차게 하루를 시작할 수 있다.</h4>
-    <br>
-    <div class="img"></div>
-    <br>
-    <div class="wrap">
+    <div class="center">
+        <div class="container">
 
-        <button onclick="openclose_exercise()" id="btn-post-box" type="button" class="btn btn-danger">영상 추가하기
-        </button>
+            <button onclick="openclose_exercise()" id="btn-post-box" type="button" class="btn btn-danger">영상 추가하기
+            </button>
+            <br>
 
-
-        <div id="post-box" class="form-post" style="display:none">
-            <div>
-                <div class="form-group">
-                    <label for="post-url">영상 URL</label>
-                    <input id="post-url" class="form-control" placeholder="">
-                </div>
-                <div class="form-group">
-                    <label for="post-comment">코멘트</label>
-                    <textarea id="post-comment" class="form-control" rows="2"></textarea>
-                </div>
-                <button type="button" class="btn btn-danger" onclick="post_exercise_movie()">영상저장</button>
-            </div>
-        </div>
-        <div id="cards-box" class="card-columns">
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+            <div id="post-box" class="form-post" style="display:none">
+                <div>
+                    <div class="form-group">
+                        <label for="post-url">영상 URL</label>
+                        <input id="post-url" class="form-control" placeholder="">
+                    </div>
+                    <div class="form-group">
+                        <label for="post-comment">코멘트</label>
+                        <textarea id="post-comment" class="form-control" rows="2"></textarea>
+                    </div>
+                    <button type="button" class="btn btn-danger" onclick="post_exercise_movie()">영상저장</button>
                 </div>
             </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+            <div id="cards-box" class="card-columns">
+                <div class="card">
+                    <img class="card-img-top"
+                         src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
+                         alt="Card image cap">
+                    <div class="card-body">
+                        <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
+                        <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="delete"
-                       onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                <div class="card">
+                    <img class="card-img-top"
+                         src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
+                         alt="Card image cap">
+                    <div class="card-body">
+                        <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
+                        <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="delete"
-                       onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                <div class="card">
+                    <img class="card-img-top"
+                         src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
+                         alt="Card image cap">
+                    <div class="card-body">
+                        <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
+                        <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                        <a href="#" class="delete"
+                           onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="delete"
-                       onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                <div class="card">
+                    <img class="card-img-top"
+                         src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
+                         alt="Card image cap">
+                    <div class="card-body">
+                        <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
+                        <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                        <a href="#" class="delete"
+                           onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img class="card-img-top"
-                     src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
-                     alt="Card image cap">
-                <div class="card-body">
-                    <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
-                    <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#" class="delete"
-                       onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                <div class="card">
+                    <img class="card-img-top"
+                         src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
+                         alt="Card image cap">
+                    <div class="card-body">
+                        <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
+                        <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                        <a href="#" class="delete"
+                           onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top"
+                         src="https://www.eurail.com/content/dam/images/eurail/Italy%20OCP%20Promo%20Block.adaptive.767.1535627244182.jpg"
+                         alt="Card image cap">
+                    <div class="card-body">
+                        <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
+                        <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
+                        <a href="#" class="delete"
+                           onclick="delete_exercise('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
+                    </div>
                 </div>
             </div>
         </div>
