--- a/templates/scribing.html
+++ b/templates/scribing.html
@@ -45,12 +45,11 @@
             background-image: url('https://t1.daumcdn.net/cfile/tistory/266BDE4F5575168318');
             background-size: cover;
             background-position: center;
-            width: 300px;
-            height: 200px;
+            width: 250px;
+            height: 180px;
         }
 
         #post-box {
-            width: 400px;
             margin: 20px auto;
             padding: 10px;
             border: #b4b6b6 solid;
@@ -128,7 +127,7 @@
         }
 
         function makecard_diary(date, content) {
-            let temp_html = `<div class="card" style="width: 200px;">
+            let temp_html = `<div class="card">
         <div class="card-body">
             <h5 class="card-title">${date}</h5>
             <p class="card-text">${content} </p>
@@ -142,93 +141,98 @@
 </head>
 <body>
 
-<div class="wrap">
-    <p>
-    <h1 class="display-4">Scribing(쓰기)&#127774;</h1> <br>
-    <p>
-    <div class="menu">
-        <a class="btn btn-outline-primary" href="{{ url_for('get_silencepage') }}"> Silence<br>(침묵)</a>
-        <a class="btn btn-outline-secondary" href="{{ url_for('get_affirmationpage') }}">Affirmation<br>(확신의 말)</a>
-        <a class="btn btn-outline-success" href="{{ url_for('get_visualizationpage') }}">Visualization<br>(시각화)</a>
-        <a class="btn btn-outline-danger" href="{{ url_for('get_exercisepage') }}">Exercise<br>운동</a>
-        <a class="btn btn-outline-warning" href="{{ url_for('get_readpage') }}"> Reading<br>(독서)</a>
-        <a class="btn btn-info" href="{{ url_for('get_scribingpage') }}">Scribing<br>(쓰기)</a>
+<div class="center">
+    <div class="container">
+        <p>
+        <h1>Scribing(쓰기)&#127774;</h1> <br>
+        <p>
+        <div class="menu">
+            <a class="btn btn-outline-primary" href="{{ url_for('get_silencepage') }}"> Silence<br>(침묵)</a>
+            <a class="btn btn-outline-secondary" href="{{ url_for('get_affirmationpage') }}">Affirmation<br>(확신의 말)</a>
+            <a class="btn btn-outline-success" href="{{ url_for('get_visualizationpage') }}">Visualization<br>(시각화)</a>
+            <a class="btn btn-outline-danger" href="{{ url_for('get_exercisepage') }}">Exercise<br>운동</a>
+            <a class="btn btn-outline-warning" href="{{ url_for('get_readpage') }}"> Reading<br>(독서)</a>
+            <a class="btn btn-info" href="{{ url_for('get_scribingpage') }}">Scribing<br>(쓰기)</a>
+        </div>
+        <br>
+        <h4>생각을 손으로 정리하는 시간</h4>
+        <h5>감사함을 느끼는 대상, 자랑스러운 기억, 노력해서 얻은 결과들을 일기장에 적어보세요. 당신은 강해지고 더 많은 영감을 받으며 더 자신감 있는 사람이 될 수 있어요!</h5>
+        <br>
+        <div class="img"></div>
     </div>
     <br>
-    <h3>일기장을 꺼내 감사하게 여길 만한 것을 한가지라도 적는다.</h3>
-    <h4>오늘 당신이 달성하고 싶은 가장 중요한 일을 적어도 좋다.</h4>
-    <br>
-    <div class="img"></div>
-    <br>
-    <br>
 
-    <div class="wrap">
-        <div id="post-box" class="form-post">
-            <div>
-                <h4 style="font-weight:bold">&#9997; 기록 남기기 </h4>
-                <br>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">날짜</span>
+    <div class="center">
+        <div class="container">
+            <div id="post-box" class="form-post">
+                <div>
+                    <h4 style="font-weight:bold">&#9997; 기록 남기기 </h4>
+                    <br>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">날짜</span>
+                        </div>
+                        <form><input type="date" class="form-control" id="post-date"></form>
+                        <script>
+                            document.getElementById('post-date').value = new Date().toISOString().substring(0, 10);
+                        </script>
                     </div>
-                    <form><input type="date" class="form-control" id="post-date"></form>
-                    <script>
-                        document.getElementById('post-date').value = new Date().toISOString().substring(0, 10);
-                    </script>
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">내용</span>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">내용</span>
+                        </div>
+                        <textarea class="form-control" id="post-content"
+                                  cols="30"
+                                  rows="5" placeholder=""></textarea>
                     </div>
-                    <textarea class="form-control" id="post-content"
-                              cols="30"
-                              rows="5" placeholder=""></textarea>
+                    <!--                <div class="form-group">-->
+                    <!--                    <label for="post-date">날짜</label>-->
+                    <!--                    <form><input type='date' id='post-date'/></form>-->
+                    <!--                    <script>-->
+                    <!--                        document.getElementById('post-date').value = new Date().toISOString().substring(0, 10);-->
+                    <!--                    </script>-->
+                    <!--                </div>-->
+                    <!--                <div class="form-group">-->
+                    <!--                    <label for="post-content">기록하기</label>-->
+                    <!--                    <textarea id="post-content" class="form-control" rows="4"></textarea>-->
+                    <!--                </div>-->
+                    <button type="button" class="btn btn-info" onclick="post_diary()">저장하기</button>
                 </div>
-                <!--                <div class="form-group">-->
-                <!--                    <label for="post-date">날짜</label>-->
-                <!--                    <form><input type='date' id='post-date'/></form>-->
-                <!--                    <script>-->
-                <!--                        document.getElementById('post-date').value = new Date().toISOString().substring(0, 10);-->
-                <!--                    </script>-->
-                <!--                </div>-->
-                <!--                <div class="form-group">-->
-                <!--                    <label for="post-content">기록하기</label>-->
-                <!--                    <textarea id="post-content" class="form-control" rows="4"></textarea>-->
-                <!--                </div>-->
-                <button type="button" class="btn btn-info" onclick="post_diary()">저장하기</button>
             </div>
         </div>
-        <div id="cards-box" class="card-columns">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">여기에 일기 내용을 입력하세요. </p>
-                    <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">여기에 일기 내용을 입력하세요. </p>
-                    <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">여기에 일기 내용을 입력하세요. </p>
-                    <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">여기에 일기 내용을 입력하세요. </p>
-                    <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">여기에 일기 내용을 입력하세요. </p>
-                    <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">여기에 일기 내용을 입력하세요. </p>
-                    <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
+        <div class="container">
+            <div id="cards-box" class="card-columns">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">여기에 일기 내용을 입력하세요. </p>
+                        <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">여기에 일기 내용을 입력하세요. </p>
+                        <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">여기에 일기 내용을 입력하세요. </p>
+                        <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">여기에 일기 내용을 입력하세요. </p>
+                        <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">여기에 일기 내용을 입력하세요. </p>
+                        <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">여기에 일기 내용을 입력하세요. </p>
+                        <a href="#" class="delete" onclick="delete_diary('일기내용')">삭제</a>
+                    </div>
                 </div>
             </div>
         </div>
