--- a/templates/silence.html
+++ b/templates/silence.html
@@ -46,22 +46,27 @@
             background-image: url('https://mindgil.com/editor/cheditor_5/attach/20190904092942_tvwlmulq.jpg');
             background-size: cover;
             background-position: center;
-            width: 300px;
-            height: 200px;
+            width: 250px;
+            height: 180px;
         }
 
         .comment {
-            color: #1010cb;
-            /*font-weight: bold;*/
+            color: #0a0a0a;
+            font-family: a펜고딕M;
         }
 
         #post-box {
-            width: 300px;
+            /*width: 300px;*/
             margin: 20px auto;
             padding: 50px;
             border: #b4b6b6 solid;
             border-radius: 5px;
         }
+
+        #cards-box{
+            margin: 30px auto;
+        }
+
         .delete {
             color: #d90404;
             text-decoration: underline;
@@ -121,7 +126,7 @@
                     let silences = response["silences"];
                     console.log(silences);
                     for (let i = 0; i < silences.length; i++) {
-                        makecard_silence(silences[i]["image"], silences[i]["url"], silences[i]["title"],  silences[i]["comment"])
+                        makecard_silence(silences[i]["image"], silences[i]["url"], silences[i]["title"], silences[i]["comment"])
                     }
                 }
             })
@@ -147,7 +152,7 @@
         }
 
         function makecard_silence(image, url, title, comment) {
-            let temp_html = `<div class="card" style="width: 200px;">
+            let temp_html = `<div class="card" >
                         <img class="card-img-top" src="${image}" alt="Card image cap">
                         <div class="card-body">
                         <a href="${url}" target="_blank" class="card-title">${title}</a>
@@ -161,30 +166,31 @@
 </head>
 <body>
 
-<div class="wrap">
-    <p>
-    <h1 class="display-4">Silence(침묵)&#127774;</h1> <br>
-    <p>
-    <div class="menu">
-        <a class="btn btn-primary" href="{{ url_for('get_silencepage') }}"> Silence<br>(침묵)</a>
-        <a class="btn btn-outline-secondary" href="{{ url_for('get_affirmationpage') }}">Affirmation<br>(확신의 말)</a>
-        <a class="btn btn-outline-success" href="{{ url_for('get_visualizationpage') }}">Visualization<br>(시각화)</a>
-        <a class="btn btn-outline-danger" href="{{ url_for('get_exercisepage') }}">Exercise<br>운동</a>
-        <a class="btn btn-outline-warning" href="{{ url_for('get_readpage') }}"> Reading<br>(독서)</a>
-        <a class="btn btn-outline-info" href="{{ url_for('get_scribingpage') }}">Scribing<br>(쓰기)</a>
-    </div>
-    <br>
-    <h3>눈을 감은 채 고요하게 침묵의 시간을 즐긴다.</h3>
-    <h4>이 시간은 산만한 생각을 잠재우고 오늘 하루에 집중하는 시간이다.</h4>
-    <br>
-    <div class="img"></div>
-    <br>
-    <div class="wrap">
-
-        <button onclick="openclose_silence()" id="btn-post-box" type="button" class="btn btn-primary">영상 추가하기
+<div class="center">
+    <div class="container">
+        <p>
+        <h1>Silence(침묵)&#127774;</h1> <br>
+        <p>
+        <div class="menu">
+            <a class="btn btn-primary" href="{{ url_for('get_silencepage') }}"> Silence<br>(침묵)</a>
+            <a class="btn btn-outline-secondary" href="{{ url_for('get_affirmationpage') }}">Affirmation<br>(확신의 말)</a>
+            <a class="btn btn-outline-success" href="{{ url_for('get_visualizationpage') }}">Visualization<br>(시각화)</a>
+            <a class="btn btn-outline-danger" href="{{ url_for('get_exercisepage') }}">Exercise<br>운동</a>
+            <a class="btn btn-outline-warning" href="{{ url_for('get_readpage') }}"> Reading<br>(독서)</a>
+            <a class="btn btn-outline-info" href="{{ url_for('get_scribingpage') }}">Scribing<br>(쓰기)</a>
+        </div>
+        <br>
+        <h4>삶의 목적을 찾는 침묵의 시간</h4>
+        <h5>고요히, 평화롭게, 그리고 천천히, 깊이 호흡하며 앉아 있어요. 침묵 속에 앉아 지금 이 순간에 충실해보세요.</h5>
+        <br>
+        <div class="img"></div>
+        <br>
+        <button onclick="openclose_silence()" id="btn-post-box" type="button" class="btn btn-primary">영상
+            추가하기
         </button>
-
-
+        <br>
+    </div>
+    <div class="container">
         <div id="post-box" class="form-post" style="display:none">
             <div>
                 <div class="form-group">
@@ -197,6 +203,7 @@
                 </div>
                 <button type="button" class="btn btn-primary" onclick="post_silence_movie()">영상저장</button>
             </div>
+            <br>
         </div>
         <div id="cards-box" class="card-columns">
             <div class="card">
@@ -206,7 +213,7 @@
                 <div class="card-body">
                     <a href="#" class="card-title">여기 기사 제목이 들어가죠</a>
                     <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-                    <a href="#"  class="delete"
+                    <a href="#" class="delete"
                        onclick="delete_silence('https://www.youtube.com/watch?v=VVc7X4lSO4w')">삭제</a>
                 </div>
             </div>
@@ -267,6 +274,9 @@
             </div>
         </div>
     </div>
+</div>
+</div>
+</div>
 </div>
 </body>
 </html>
